	'parallel' is a socket cluster or there is a default cluster
	('parallel = NULL'), this will be used without setting up and
	closing the cluster. This (1) saves time, (2) allows using of
	other packages than 'vegan' if user has given command
	'clusterEvalQ(library(foo))', and (3) makes unix-like OS
	(incl. MacOS X and Linux) to use the socket processing instead of
	forking.

Version 2.1-5 (closed October 30, 2011)

	* opened a new version with the release of vegan 2.0-1 on Oct 20,
	2011.

	* metaMDSdist: the default value of "noshare" was inconsistent
	with metaMDS(), and therefore stressplot() could fail for
	engine="isoMDS". Usually metaMDS() sets the 'noshare' depending on
	the engine, but metaMDSdist() is called directly from
	capscale(..., metaMDSdist = TRUE) and metaMDSredist (for
	stressplot), and now these default to extended dissimilarities.
	The problem was reported by Falk Hildebrand

	* capscale: could fail if constrained component had zero rank,
	typically in partial models where constrained component was
	completely aliased. This was observed when checking an R-News
	query of October 19, 2011
	(https://stat.ethz.ch/pipermail/r-help/2011-October/293077.html)
	
Version 2.1-4 (opened October 20, 2011)

	* adonis, anosim, CCorA, envfit (factorfit, vectorfit), mantel,
	mantel.partial, mrpp, protest: user interface changed and
	'permutations' can now be a matrix where each row gives permuted
	indices. Internally first find a permutation matrix or use the
	given permutation matrix, and then find the statistics with single
	{ls}apply. Functions adonis and mrpp already worked like this, but
	they gained the option of matrix input. This makes the functions
	ready both for the 'permute' package and for parallelization
	(replace {ls}apply with mclapply, par{SL}apply).  Function
	envfit() was much simplified by generating a common permutation
	matrix in envfit.default() and using that as the input to